Bug 109689 - replaceWithJump should not decrease the offset by 1 on ARM traditional.
Summary: replaceWithJump should not decrease the offset by 1 on ARM traditional.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 108645
  Show dependency treegraph
 
Reported: 2013-02-13 06:49 PST by Zoltan Herczeg
Modified: 2013-02-15 01:03 PST (History)
5 users (show)

See Also:


Attachments
patch (1.31 KB, patch)
2013-02-13 06:52 PST, Zoltan Herczeg
oliver: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Zoltan Herczeg 2013-02-13 06:49:27 PST
It is sad we did not find it before.
Comment 1 Zoltan Herczeg 2013-02-13 06:52:42 PST
Created attachment 188076 [details]
patch
Comment 2 WebKit Review Bot 2013-02-13 08:25:08 PST
Comment on attachment 188076 [details]
patch

Clearing flags on attachment: 188076

Committed r142751: <http://trac.webkit.org/changeset/142751>
Comment 3 WebKit Review Bot 2013-02-13 08:25:11 PST
All reviewed patches have been landed.  Closing bug.
Comment 4 Zoltan Herczeg 2013-02-14 02:10:49 PST
Hm... why this patch is landed... Uh it seems I hit the wrong buttons when I submitted the patch and reviewed myself... Sorry. Could someone else check the patch?
Comment 5 Oliver Hunt 2013-02-14 08:53:50 PST
Comment on attachment 188076 [details]
patch

Looks sane to me :D
Comment 6 Zoltan Herczeg 2013-02-15 01:03:41 PST
(In reply to comment #5)
> (From update of attachment 188076 [details])
> Looks sane to me :D

Thanks! Changelog fixed in r142970.