replaceWithJump should not decrease the offset by 1 on ARM traditional. https://bugs.webkit.org/show_bug.cgi?id=109689

Reviewed by Zoltan Herczeg.

* assembler/ARMAssembler.h:
(JSC::ARMAssembler::replaceWithJump):


Canonical link: https://commits.webkit.org/127971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142751 268f45cc-cd09-0410-ab3c-d52691b4dbfc